[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kml2gpx"
version = "1.0.1"
description = "Convert kml file from google earth to gpx file"
readme = "README.md"
requires-python = ">=3.6.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
kml2gpx = "src.kml2gpx.app:main"
